# MPR_Project

./: CMakeLists.txt  README.md  run.bat  start_client.bat  start_server.bat
client/: CMakeLists.txt  client.cpp  client.hpp  main.cpp
include/: logger.hpp  matrix.hpp  socket.hpp  thread_pool.hpp
server/: CMakeLists.txt  main.cpp  server.cpp  server.hpp
src/: logger.cpp  matrix.cpp  socket.cpp  thread_pool.cpp
